// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`New Tenant Form Modal should render correctly when closed 1`] = `
<Modal
  actions={
    Array [
      <Button
        aria-label="Close Modal"
        onClick={[MockFunction]}
        variant="tertiary"
      >
        Trans(i18nKey=close)
      </Button>,
      <Button
        aria-label="Save"
        data-cy="save"
        isDisabled={true}
        onClick={[Function]}
      >
        Trans(i18nKey=save)
      </Button>,
    ]
  }
  appendTo={[Function]}
  aria-describedby=""
  aria-label=""
  aria-labelledby=""
  className=""
  hasNoBodyWrapper={false}
  isOpen={false}
  onClose={[MockFunction]}
  ouiaSafe={true}
  showClose={true}
  title="Trans(i18nKey=createTenant)"
  titleIconVariant={null}
  titleLabel=""
  variant="small"
>
  <Form
    onSubmit={[Function]}
  >
    <InputGroup>
      <Label>
        Trans(i18nKey=name)
      </Label>
      <TextInput
        aria-label="Name"
        data-cy="name"
        onChange={[Function]}
      />
    </InputGroup>
    <InputGroup>
      <Label>
        Trans(i18nKey=scheduleStartDate)
      </Label>
      <TextInput
        aria-label="Schedule Start Date"
        data-cy="schedule-start-date"
        onChange={[Function]}
        type="date"
      />
    </InputGroup>
    <InputGroup>
      <Label>
        Trans(i18nKey=draftLength)
      </Label>
      <TextInput
        aria-label="Draft Length"
        data-cy="draft-length"
        onChange={[Function]}
        type="number"
      />
    </InputGroup>
    <InputGroup>
      <Label>
        Trans(i18nKey=publishNotice)
      </Label>
      <TextInput
        aria-label="Publish Notice"
        data-cy="publish-notice"
        onChange={[Function]}
        type="number"
      />
    </InputGroup>
    <InputGroup>
      <Label>
        Trans(i18nKey=publishLength)
      </Label>
      <TextInput
        aria-label="Publish Length"
        data-cy="publish-length"
        defaultValue="7"
        isDisabled={true}
        onChange={[Function]}
        type="number"
      />
    </InputGroup>
    <InputGroup>
      <Label>
        Trans(i18nKey=rotationLength)
      </Label>
      <TextInput
        aria-label="Rotation Length"
        data-cy="rotation-length"
        min={2}
        onChange={[Function]}
        type="number"
      />
    </InputGroup>
    <InputGroup
      style={
        Object {
          "display": "grid",
          "gridTemplateColumns": "auto 1fr",
        }
      }
    >
      <Label>
        Trans(i18nKey=timezone)
      </Label>
      <TypeaheadSelectInput
        aria-label="Timezone"
        autoSize={false}
        emptyText="Trans(i18nKey=selectATimezone)"
        onChange={[Function]}
        optionToStringMap={[Function]}
        options={
          Array [
            "Timezone/1",
            "Timezone/2",
            "Timezone/3",
            "UTC",
          ]
        }
        value="UTC"
      />
    </InputGroup>
  </Form>
</Modal>
`;

exports[`New Tenant Form Modal should render correctly when opened 1`] = `
<Modal
  actions={
    Array [
      <Button
        aria-label="Close Modal"
        onClick={[MockFunction]}
        variant="tertiary"
      >
        Trans(i18nKey=close)
      </Button>,
      <Button
        aria-label="Save"
        data-cy="save"
        isDisabled={true}
        onClick={[Function]}
      >
        Trans(i18nKey=save)
      </Button>,
    ]
  }
  appendTo={[Function]}
  aria-describedby=""
  aria-label=""
  aria-labelledby=""
  className=""
  hasNoBodyWrapper={false}
  isOpen={true}
  onClose={[MockFunction]}
  ouiaSafe={true}
  showClose={true}
  title="Trans(i18nKey=createTenant)"
  titleIconVariant={null}
  titleLabel=""
  variant="small"
>
  <Form
    onSubmit={[Function]}
  >
    <InputGroup>
      <Label>
        Trans(i18nKey=name)
      </Label>
      <TextInput
        aria-label="Name"
        data-cy="name"
        onChange={[Function]}
      />
    </InputGroup>
    <InputGroup>
      <Label>
        Trans(i18nKey=scheduleStartDate)
      </Label>
      <TextInput
        aria-label="Schedule Start Date"
        data-cy="schedule-start-date"
        onChange={[Function]}
        type="date"
      />
    </InputGroup>
    <InputGroup>
      <Label>
        Trans(i18nKey=draftLength)
      </Label>
      <TextInput
        aria-label="Draft Length"
        data-cy="draft-length"
        onChange={[Function]}
        type="number"
      />
    </InputGroup>
    <InputGroup>
      <Label>
        Trans(i18nKey=publishNotice)
      </Label>
      <TextInput
        aria-label="Publish Notice"
        data-cy="publish-notice"
        onChange={[Function]}
        type="number"
      />
    </InputGroup>
    <InputGroup>
      <Label>
        Trans(i18nKey=publishLength)
      </Label>
      <TextInput
        aria-label="Publish Length"
        data-cy="publish-length"
        defaultValue="7"
        isDisabled={true}
        onChange={[Function]}
        type="number"
      />
    </InputGroup>
    <InputGroup>
      <Label>
        Trans(i18nKey=rotationLength)
      </Label>
      <TextInput
        aria-label="Rotation Length"
        data-cy="rotation-length"
        min={2}
        onChange={[Function]}
        type="number"
      />
    </InputGroup>
    <InputGroup
      style={
        Object {
          "display": "grid",
          "gridTemplateColumns": "auto 1fr",
        }
      }
    >
      <Label>
        Trans(i18nKey=timezone)
      </Label>
      <TypeaheadSelectInput
        aria-label="Timezone"
        autoSize={false}
        emptyText="Trans(i18nKey=selectATimezone)"
        onChange={[Function]}
        optionToStringMap={[Function]}
        options={
          Array [
            "Timezone/1",
            "Timezone/2",
            "Timezone/3",
            "UTC",
          ]
        }
        value="UTC"
      />
    </InputGroup>
  </Form>
</Modal>
`;
